--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ language: cpp
 before_script:
 - sudo apt update
 - sudo apt install libboost-test-dev -y
+- sudo apt install gcc-7
+- sudo apt install g++-7
 - sudo apt install doxygen -y
 - sudo apt install graphviz -y
 - sudo apt install python3
