--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 dist: xenial
 language: cpp
 
+
 before_script:
 - sudo add-apt-repository ppa:jonathonf/gcc-7.1 -y
 - sudo apt update
 - sudo apt install libboost-test-dev -y
 - sudo apt install gcc-7 -y
 - sudo apt install g++-7 -y
+- sudo apt install libc++-7-dev
+- sudo apt install libc++abi-7-dev
 - sudo apt install doxygen -y
 - sudo apt install graphviz -y
 - sudo apt install python3 -y
