--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler: clang
 before_script:
 - sudo apt update
 - sudo apt install libboost-test-dev -y
-- sudo apt install llvm-toolchain-xenial-7 -y
+- sudo apt install llvm-toolchain-xenial-7
 - sudo apt install libc++-7-dev
 - sudo apt install libc++abi-7-dev
 - sudo apt install doxygen -y
