--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
 - conan profile update settings.compiler.version=7 default
 - conan install .
 - CXXFLAGS="-std=c++14" cmake .
-- cmake --build .
+- CXXFLAGS="-std=c++14" cmake --build .
 - cmake --build . --target package
 
 deploy:
