--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
 - sudo apt install python3-pip -y
 - sudo apt install python3-setuptools -y
 - pip3 install --upgrade pip
-- pip3 install six==1.12.0
+- pip3 install --user six==1.12.0
 - pip3 install -e .
 - pip3 install --user conan
 
